--- a/src/main/resources/assets/lifeseries/lang/en_us.json
+++ b/src/main/resources/assets/lifeseries/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "death.attack.soulmate": "%p couldn't live without their soulmate."
+  "enchantment.level.1": "",
+  "death.attack.soulmate": "%1$s couldn't live without their soulmate",
+  "death.attack.soulmate.item": "%1$s couldn't live without %2$s",
+  "death.attack.soulmate.player": "%1$s couldn't live without %2$s"
 }
