--- a/src/main/resources/assets/lifeseries/lang/en_us.json
+++ b/src/main/resources/assets/lifeseries/lang/en_us.json
@@ -3,5 +3,7 @@
   "death.attack.soulmate": "%1$s couldn't live without their soulmate",
   "death.attack.soulmate.item": "%1$s couldn't live without %2$s",
   "death.attack.soulmate.player": "%1$s couldn't live without %2$s",
-  "entity.lifeseries.mantis": "Mantis"
+  "death.attack.snail": "%1$s was slain by their snail",
+  "death.attack.snail.item": "%1$s was slain by %2$s",
+  "death.attack.snail.player": "%1$s was slain by %2$s"
 }
