--- a/src/main/resources/resourcepacks/lifeseries/assets/lifeseries/lang/en_us.json
+++ b/src/main/resources/resourcepacks/lifeseries/assets/lifeseries/lang/en_us.json
@@ -5,5 +5,7 @@
   "death.attack.soulmate.player": "%1$s couldn't live without %2$s",
   "death.attack.snail": "%1$s was slain by their snail",
   "death.attack.snail.item": "%1$s was slain by %2$s",
-  "death.attack.snail.player": "%1$s was slain by %2$s"
+  "death.attack.snail.player": "%1$s was slain by %2$s",
+  "key.categories.lifeseries": "Life Series",
+  "key.lifeseries.superpower": "Activate Superpower"
 }
